update to TokenFactory to implement authToken